--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <header class="page-header">
       <h1>Meridian Services Directory</h1>
       <p class="lead">Neighbors first. A simple way to offer what you do—and find what you need—right here in Meridian.</p>
+
+      <!-- Added: safe, centered link to the browse page -->
+      <p style="text-align:center;margin-top:10px;">
+        <a href="services.html" style="text-decoration:none;">Browse services →</a>
+      </p>
     </header>
 
     <!-- Meridian narrative -->
@@ -93,11 +98,10 @@
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   <!-- Configure your Supabase project here -->
   <script>
-    // TODO: replace with your actual values
+    // already set to your project
     const SUPABASE_URL = "https://hpzmzppvfqsgirdxblmh.supabase.co";
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imhwem16cHB2ZnFzZ2lyZHhibG1oIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUxNTA5MjEsImV4cCI6MjA3MDcyNjkyMX0.b8_jIVUniTjSiZJfQ7HVYqsgmiYyqLL3wVkJWDtN8rs";
 
-    // Initialize client
     const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
     // Form handler: insert into 'services' table
