Add styled Browse Services placeholder page

--- a/services.html
+++ b/services.html
@@ -3,18 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Browse Services - Meridian Directory</title>
+  <title>Browse Services – Meridian Services Directory</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <main class="container">
     <header class="page-header">
       <h1>Browse Services</h1>
-      <p class="lead">
-        We’re just getting started! As more of our neighbors sign up, this is where you’ll be able to find them.  
-        If you have something to offer, <a href="index.html#add-service">add your service here</a> and help us grow the list.
-      </p>
+      <p class="lead">Neighbors helping neighbors — right here in Meridian.</p>
     </header>
+
+    <section class="about block">
+      <p>We’re just getting started! As more of our neighbors sign up, this is where you’ll be able to browse the services, skills, and knowledge shared within our community.</p>
+      <p>If you have something to offer — whether it’s fixing a fence, baking amazing bread, tutoring kids, or helping with tech — <a href="index.html#add-service">add your service</a> today. Every new listing makes this directory more useful for everyone.</p>
+      <p>Think of it as keeping our resources close to home, where trust runs deep and helping hands are just a few houses away.</p>
+    </section>
   </main>
 </body>
 </html>
