--- a/services.html
+++ b/services.html
@@ -49,7 +49,13 @@
     </section>
   </main>
 
+  <!-- Configuration and Dependencies -->
+  <script src="config.js"></script>
+  <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   <script>
+    // Initialize Supabase client with config values
+    const supabase = window.supabase.createClient(window.config.SUPABASE_URL, window.config.SUPABASE_ANON_KEY);
+
     // DOM
     const resultsEl = document.getElementById('results');
     const resultsMetaEl = document.getElementById('resultsMeta');
@@ -140,9 +146,11 @@
 
     async function load() {
       try {
-        const response = await fetch('/api/services');
-        if (!response.ok) throw new Error('Failed to load services');
-        const data = await response.json();
+        const { data, error } = await supabase
+          .from('services')
+          .select('id, name, category, description, price, contact, created_at');
+
+        if (error) throw error;
 
         ALL = data || [];
         populateCategoryFilter(ALL);
