Add subtle admin links to footer

--- a/services.html
+++ b/services.html
@@ -49,6 +49,11 @@
     </section>
   </main>
 
+  <!-- Admin link (subtle footer) -->
+  <footer style="text-align: center; padding: 20px 0; font-size: 0.8em; color: #999;">
+    <a href="admin.html" style="color: inherit; text-decoration: none;">·</a>
+  </footer>
+
   <!-- Supabase SDK -->
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   <script>
