--- a/admin.html
+++ b/admin.html
@@ -107,26 +107,51 @@
             if (!confirm('Are you sure you want to delete this service?')) return;
             
             try {
+                // Remove from UI first for immediate feedback
+                const card = document.querySelector(`[data-id="${id}"]`);
+                if (card) {
+                    card.style.opacity = '0.5';
+                }
+
+                // Delete from Supabase
                 const { error } = await supabase
                     .from('services')
                     .delete()
-                    .match({ id: id });
+                    .eq('id', id);
 
                 if (error) {
                     throw error;
                 }
 
-                // If delete was successful, remove the card from UI immediately
-                const card = document.querySelector(`[data-id="${id}"]`);
+                // Wait a moment to ensure deletion is processed
+                await new Promise(resolve => setTimeout(resolve, 500));
+
+                // Verify deletion
+                const { data: checkData } = await supabase
+                    .from('services')
+                    .select('id')
+                    .eq('id', id)
+                    .single();
+
+                if (checkData) {
+                    throw new Error('Service still exists');
+                }
+
+                // If we get here, the deletion was successful
                 if (card) {
                     card.remove();
                 }
 
-                // Then reload all services to ensure everything is in sync
-                await loadServices();
             } catch (error) {
                 console.error('Delete error:', error);
                 alert('Error deleting service. Please try again.');
+                // Restore the UI if deletion failed
+                const card = document.querySelector(`[data-id="${id}"]`);
+                if (card) {
+                    card.style.opacity = '1';
+                }
+                // Reload to ensure we're in sync
+                await loadServices();
             }
         }
 
