Trigger redeployment with a comment

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   <!-- Configure your Supabase project here -->
   <script>
+    <!-- Triggering redeployment on August 16, 2025 -->
     // already set to your project
     const SUPABASE_URL = "https://hpzmzppvfqsgirdxblmh.supabase.co";
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imhwem16cHB2ZnFzZ2lyZHhibG1oIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUxNTA5MjEsImV4cCI6MjA3MDcyNjkyMX0.b8_jIVUniTjSiZJfQ7HVYqsgmiYyqLL3wVkJWDtN8rs";
